fix(core): ensure that focus is visible above other z-index

--- a/packages/core/src/spacing/tokens.scss
+++ b/packages/core/src/spacing/tokens.scss
@@ -19,12 +19,13 @@ $spacing-12: 3rem;
 
 // z-index values from Bootstrap
 // https://v5.getbootstrap.com/docs/5.0/layout/z-index/
-$zindex-focus: 980;
 $zindex-dropdown: 1000;
 $zindex-sticky: 1020;
 $zindex-fixed: 1030;
 $zindex-modal-backdrop: 1040;
 $zindex-modal: 1050;
+// not in Bootstrap: ensure that focused elements aren't obscured
+$zindex-focus: 1055;
 $zindex-popover: 1060;
 $zindex-tooltip: 1070;
 
